# feces-ai

./: .gitignore  LICENSE  pyproject.toml
feces_ai/: main.py
